--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
-    "test:run": "vitest run"
+    "test:run": "vitest run",
+    "test:report": "vitest run --coverage && start coverage/index.html"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
