--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recharts": "^3.2.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.8.0",
